--- a/Image_Custom/mainwindow.ui
+++ b/Image_Custom/mainwindow.ui
@@ -6,17 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>943</width>
-    <height>719</height>
+    <width>963</width>
+    <height>690</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QHBoxLayout" name="horizontalLayout">
+   <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,0,0">
     <item>
-     <widget class="ImageWidget" name="image_view"/>
+     <widget class="ImgRoiWidget" name="image_view"/>
+    </item>
+    <item>
+     <widget class="QTableView" name="tableView"/>
     </item>
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
@@ -55,7 +58,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>943</width>
+     <width>963</width>
      <height>21</height>
     </rect>
    </property>
@@ -64,9 +67,9 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>ImageWidget</class>
+   <class>ImgRoiWidget</class>
    <extends>QGraphicsView</extends>
-   <header location="global">imagewidget.h</header>
+   <header location="global">Widget/imgroiwidget.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
