--- a/Picking_soft/Picking_control/resource.qrc
+++ b/Picking_soft/Picking_control/resource.qrc
@@ -1,11 +1,11 @@
 <RCC>
     <qresource prefix="/icon">
-        <file>icon/add-icon.png</file>
-        <file>icon/load-icon.png</file>
-        <file>icon/update-icon.png</file>
         <file>icon/dashboard-icon.svg</file>
         <file>icon/vision-icon.svg</file>
         <file>icon/robot-icon.svg</file>
+        <file>icon/new-file-icon.svg</file>
+        <file>icon/plus-square-icon.svg</file>
+        <file>icon/new-file-icon-dark.svg</file>
     </qresource>
     <qresource prefix="/style_sheet">
         <file>style/main_style.qss</file>
