--- a/Picking_soft/Picking_control/mainwindow.ui
+++ b/Picking_soft/Picking_control/mainwindow.ui
@@ -180,9 +180,9 @@
     <item>
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
-       <number>2</number>
+       <number>1</number>
       </property>
-      <widget class="QWidget" name="page">
+      <widget class="QWidget" name="page_dashboard">
        <widget class="QLabel" name="label">
         <property name="geometry">
          <rect>
@@ -197,35 +197,99 @@
         </property>
        </widget>
       </widget>
-      <widget class="QWidget" name="page_2">
-       <widget class="QLabel" name="label_2">
-        <property name="geometry">
-         <rect>
-          <x>70</x>
-          <y>50</y>
-          <width>111</width>
-          <height>21</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>This is vision</string>
-        </property>
-       </widget>
+      <widget class="QWidget" name="page_vision">
+       <layout class="QHBoxLayout" name="horizontalLayout_4">
+        <item>
+         <widget class="ImageWidget" name="graphicsView_main"/>
+        </item>
+        <item>
+         <layout class="QVBoxLayout" name="verticalLayout_3">
+          <item>
+           <widget class="QPushButton" name="btn_set_roi">
+            <property name="text">
+             <string>Set ROI</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="btn_set_polygon">
+            <property name="text">
+             <string>Set Polygon</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="verticalSpacer_3">
+            <property name="orientation">
+             <enum>Qt::Orientation::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
+        </item>
+       </layout>
       </widget>
-      <widget class="QWidget" name="page_3">
-       <widget class="QLabel" name="label_3">
-        <property name="geometry">
-         <rect>
-          <x>90</x>
-          <y>60</y>
-          <width>111</width>
-          <height>21</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>This is robot</string>
-        </property>
-       </widget>
+      <widget class="QWidget" name="page_robot">
+       <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="2,1">
+        <item>
+         <layout class="QVBoxLayout" name="verticalLayout_2">
+          <item>
+           <layout class="QHBoxLayout" name="horizontalLayout_2">
+            <item>
+             <widget class="QPushButton" name="btn_add">
+              <property name="text">
+               <string>Add</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="btn_delete">
+              <property name="text">
+               <string>Delete</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="btn_move_up">
+              <property name="text">
+               <string>Move up</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="btn_move_down">
+              <property name="text">
+               <string>Move down</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+          <item>
+           <widget class="rp::CommandTreeView" name="treeView">
+            <property name="dragDropMode">
+             <enum>QAbstractItemView::DragDropMode::InternalMove</enum>
+            </property>
+            <property name="defaultDropAction">
+             <enum>Qt::DropAction::MoveAction</enum>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <widget class="rp::CommandEditorPanel" name="stackedWidget_cmd_editor">
+          <widget class="QWidget" name="page"/>
+          <widget class="QWidget" name="page_2"/>
+         </widget>
+        </item>
+       </layout>
       </widget>
      </widget>
     </item>
@@ -272,6 +336,22 @@
    <class>TabWidgetButton</class>
    <extends>QToolButton</extends>
    <header location="global">custom_widget/tab_widget/tab_widget_button.h</header>
+  </customwidget>
+  <customwidget>
+   <class>rp::CommandTreeView</class>
+   <extends>QTreeView</extends>
+   <header location="global">custom_widget/robot/commandtreeview.h</header>
+  </customwidget>
+  <customwidget>
+   <class>rp::CommandEditorPanel</class>
+   <extends>QStackedWidget</extends>
+   <header location="global">custom_widget/robot/commandeditorpanel.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>ImageWidget</class>
+   <extends>QGraphicsView</extends>
+   <header location="global">custom_widget/image_widget.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
