--- a/Picking_soft/Picking_control/custom_widget/form_pattern_set_picking_pos.ui
+++ b/Picking_soft/Picking_control/custom_widget/form_pattern_set_picking_pos.ui
@@ -47,6 +47,12 @@
        <property name="buttonSymbols">
         <enum>QAbstractSpinBox::ButtonSymbols::NoButtons</enum>
        </property>
+       <property name="minimum">
+        <double>-5000.000000000000000</double>
+       </property>
+       <property name="maximum">
+        <double>5000.000000000000000</double>
+       </property>
       </widget>
      </item>
      <item row="1" column="1">
@@ -59,6 +65,12 @@
        </property>
        <property name="buttonSymbols">
         <enum>QAbstractSpinBox::ButtonSymbols::NoButtons</enum>
+       </property>
+       <property name="minimum">
+        <double>-5000.000000000000000</double>
+       </property>
+       <property name="maximum">
+        <double>5000.000000000000000</double>
        </property>
       </widget>
      </item>
@@ -73,6 +85,12 @@
       <widget class="QDoubleSpinBox" name="dspb_angle">
        <property name="buttonSymbols">
         <enum>QAbstractSpinBox::ButtonSymbols::NoButtons</enum>
+       </property>
+       <property name="minimum">
+        <double>-180.000000000000000</double>
+       </property>
+       <property name="maximum">
+        <double>180.000000000000000</double>
        </property>
       </widget>
      </item>
