--- a/Picking_soft/Picking_control/style/main_style.qss
+++ b/Picking_soft/Picking_control/style/main_style.qss
@@ -144,7 +144,7 @@ QPushButton:disabled{
 	padding: 2px;
 	background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(57, 57, 57, 255), stop:1 rgba(77, 77, 77, 255));
 }
-QLineEdit {
+/* QLineEdit {
 	border-width: 1px; border-radius: 4px;
 	border-color: rgb(58, 58, 58);
 	border-style: inset;
@@ -153,6 +153,27 @@ QLineEdit {
 	background:rgb(100, 100, 100);
 	selection-background-color: rgb(187, 187, 187);
 	selection-color: rgb(60, 63, 65);
+} */
+ QLineEdit {
+	border-width: 1px;
+	border-style: solid;
+	border-color: #4fa08b;
+	background-color: #222b2e;
+	color: #d3dae3;
+}
+QSpinBox {
+	color: #d3dae3;
+	background-color: #222b2e;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #4fa08b;
+}
+QDoubleSpinBox {
+	color: #d3dae3;
+	background-color: #222b2e;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #4fa08b;
 }
 QLabel {
 	color:rgb(255,255,255);	
